# sol-execbench-solver

./: .env.example  .gitignore  README.md  pyproject.toml
designs/: 067_flash_attention_gqa_ultralong.md  069_rms_norm.md
docs/: agent.md  context-architecture-plan.md  gpu-execution.md  oncall-runbook.md  orchestration.md  orchestrator-engine.md
docs/research/: context-architecture-deep-research.json  context-architecture-deep-research.md
kb/: README.md  autotuning-guide.md  b200-hardware.md  benchmark-grader.md  benchmark-problems.md  benchmarking-discipline.md  chinese-community-insights.md  chinese-oss-kernels.md  compiler-dsl-landscape.md  fusion-patterns.md  hopper-to-blackwell.md  library-playbook.md  llm-kernel-generation.md  optimization-playbook.md  optimization-recipe.md  oss-kernel-catalog.md  profiling-guide.md  quantized-kernels.md  sageattention-and-quant-papers.md  software-stack.md  solution-format.md  sources.md  tcgen05-and-tmem.md  transferable-hopper-tricks.md
knowledge/: global.md
knowledge/best/: attention_output_projection_with_reshape_backward.json  attention_output_projection_with_residual.json  conv2d_residual_block.json  (+36 more)
runs/: leaderboard.json
solver/: __init__.py  cli.py  dataset.py  demo_data.py  journal.py  metrics.py  problems.py  report.py  scoring.py
tests/: test_cli_agent.py  test_diagnose.py  test_engine.py  test_gpu.py  test_gpu_guard.py  test_gpu_run.py  test_harness.py  test_knowledge.py  test_metrics.py  test_noop.py  test_pod.py  test_reflection.py  test_report.py  test_review.py  test_ssh_exec.py  test_store.py
(+1827 files in other folders)
